Skeletons of more notebooks

--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -397,33 +397,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "# For demonstration, we can use CPU target if CUDA not available\n",
-    "device = torch.device('cpu')\n",
-    "# Uncomment this to run on GPU\n",
-    "device = torch.device('cuda:0') \n",
+    "from time import time\n",
     "\n",
-    "x = torch.randn(N, D_in, device=device)\n",
-    "y = torch.randn(N, D_out, device=device)\n",
+    "for device in ['cuda', 'cpu']:\n",
+    "    # For demonstration, we can use CPU target if CUDA not available\n",
+    "    if device == 'cuda' and not torch.cuda.is_available():\n",
+    "        continue\n",
+    "    start = time()\n",
+    "    print(\"Using\", device.upper())\n",
+    "    device = torch.device(device)\n",
+    "    \n",
+    "    x = torch.randn(N, D_in, device=device)\n",
+    "    y = torch.randn(N, D_out, device=device)\n",
     "\n",
-    "# Could use any of the versions shown, but for example:\n",
-    "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
-    "learning_rate = 1e-4\n",
-    "model = torch.nn.Sequential(\n",
-    "          torch.nn.Linear(D_in, H),\n",
-    "          torch.nn.ReLU(),\n",
-    "          torch.nn.Linear(H, D_out),\n",
-    "        ).to(device)\n",
+    "    # Could use any of the versions shown, but for example:\n",
+    "    loss_fn = torch.nn.MSELoss(reduction='sum')\n",
+    "    learning_rate = 1e-4\n",
+    "    model = torch.nn.Sequential(\n",
+    "              torch.nn.Linear(D_in, H),\n",
+    "              torch.nn.ReLU(),\n",
+    "              torch.nn.Linear(H, D_out),\n",
+    "            ).to(device)\n",
     "\n",
-    "for t in range(501):\n",
-    "    y_pred = model(x)\n",
-    "    loss = loss_fn(y_pred, y)\n",
-    "    model.zero_grad()\n",
-    "    loss.backward()\n",
-    "    for param in model.parameters():\n",
-    "        param.data -= learning_rate * param.grad\n",
-    "        \n",
-    "print(\"Loss after training:\", loss.item())"
+    "    for t in range(501):\n",
+    "        y_pred = model(x)\n",
+    "        loss = loss_fn(y_pred, y)\n",
+    "        model.zero_grad()\n",
+    "        loss.backward()\n",
+    "        for param in model.parameters():\n",
+    "            param.data -= learning_rate * param.grad\n",
+    "\n",
+    "    print(\"Loss after training:\", loss.item())\n",
+    "    print(\"Time elapsed: %.02f seconds\\n\" % (time()-start))"
    ]
   },
   {
@@ -447,6 +452,13 @@
     "\n",
     "<a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
