--- a/Library_Comparison.ipynb
+++ b/Library_Comparison.ipynb
@@ -163,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "model_k = keras.models.Sequential([\n",
@@ -281,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from torch import device, cuda\n",
@@ -294,7 +298,7 @@
     "    \n",
     "summary(model_t, input_size=(1,in_dim))\n",
     "\n",
-    "model_t = model_t.to(device('cpu'))"
+    "#model_t = model_t.to(device('cpu'))"
    ]
   },
   {
@@ -314,9 +318,11 @@
     "        loss = loss_fn(y_pred, y)\n",
     "        if not t % show_every:\n",
     "            y_test_pred = model_t(Variable(X_test_T))\n",
-    "            prediction = [int(x > 0.5) for x in y_test_pred.data.numpy()]\n",
+    "            prediction = [int(x > 0.5) \n",
+    "                          for x in y_test_pred.data.cpu().numpy()]\n",
     "            test_accuracy = (prediction == y_test).sum() / len(y_test)\n",
-    "            train_pred = [int(x > 0.5) for x in y_pred.data.numpy()]\n",
+    "            train_pred = [int(x > 0.5) \n",
+    "                          for x in y_pred.data.cpu().numpy()]\n",
     "            train_accuracy = (train_pred == y_train).sum() / len(y_train)\n",
     "            print(\"Batch: %04d | Training Loss: %6.2f | Train accuracy: %.4f | Test accuracy: %.4f\" % (\n",
     "                          t, loss.item(), train_accuracy, test_accuracy))\n",
@@ -351,6 +357,12 @@
     "y = torch.from_numpy(y_train[:, np.newaxis]).float()\n",
     "X_test_T = torch.from_numpy(X_test).float()\n",
     "y_test_T = torch.from_numpy(y_test[:, np.newaxis]).float()\n",
+    "\n",
+    "if cuda.is_available():\n",
+    "    X = X.to(device('cuda'))\n",
+    "    y = y.to(device('cuda'))\n",
+    "    X_test_T = X_test_T.to(device('cuda'))\n",
+    "    y_test_T = y_test_T.to(device('cuda'))\n",
     "\n",
     "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
     "optimizer = torch.optim.RMSprop(model_t.parameters(), lr=learning_rate)\n",
