--- a/AllenNLP_0.ipynb
+++ b/AllenNLP_0.ipynb
@@ -18,14 +18,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* What is AllenNLP?\n",
-    "* What is SpaCy?\n",
-    "* High Level Interfaces to NLP using PyTorch\n",
-    "* Textual Entailment\n",
-    "* Named Entity Recognition\n",
-    "* Semantic Role Labeling\n",
-    "* Machine Comprehension"
+    "<font size=\"+1\">What is AllenNLP?</font>\n",
+    "<a href=\"AllenNLP_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
+    "\n",
+    "<font size=\"+1\">What is SpaCy?</font>\n",
+    "<a href=\"AllenNLP_1.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
+    "\n",
+    "<font size=\"+1\">Hight Leven Interfaces to NLP using PyTorch</font>\n",
+    "<a href=\"AllenNLP_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
+    "\n",
+    "<font size=\"+1\">Textual Entailment</font>\n",
+    "<a href=\"AllenNLP_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
+    "\n",
+    "<font size=\"+1\">Named Entity Recognition</font> \n",
+    "<a href=\"AllenNLP_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
+    "\n",
+    "<font size=\"+1\">Semantic Role Labeling</font>\n",
+    "<a href=\"AllenNLP_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
+    "\n",
+    "<font size=\"+1\">Machine Comprehension</font>\n",
+    "<a href=\"AllenNLP_6.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
