--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "**Natural Language Processing**: This lesson looked at Reinforcement Learning.  In the next section we turn to the AllenNLP extension to PyTorch.\n",
     "\n",
-    "<a href=\"AllenNLP.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
+    "<a href=\"AllenNLP_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   }
  ],
