--- a/AllenNLP_4.ipynb
+++ b/AllenNLP_4.ipynb
@@ -24,19 +24,19 @@
     "<font size=\"+1\">What is SpaCy?</font>\n",
     "<a href=\"AllenNLP_1.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Hight Leven Interfaces to NLP using PyTorch</font>\n",
+    "<font size=\"+1\">Hight Level Interfaces to NLP using PyTorch</font>\n",
     "<a href=\"AllenNLP_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Textual Entailment</font>\n",
+    "<font size=\"+1\">Sentiment Analysis</font>\n",
     "<a href=\"AllenNLP_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Named Entity Recognition</font> \n",
+    "<font size=\"+1\">TBD</font> \n",
     "<a href=\"AllenNLP_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Semantic Role Labeling</font>\n",
+    "<font size=\"+1\">TBD</font>\n",
     "<a href=\"AllenNLP_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Machine Comprehension</font>\n",
+    "<font size=\"+1\">TBD</font>\n",
     "<a href=\"AllenNLP_6.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
    ]
   },
@@ -59,13 +59,6 @@
     "\n",
     "<a href=\"ImageClassifier.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
