--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -141,7 +141,7 @@
     "* Semantic Role Labeling\n",
     "* Machine Comprehension\n",
     "\n",
-    "<div><a href=\"AllenNLP.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
+    "<div><a href=\"AllenNLP_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
   },
   {
