Tweaks to AlleNLP intro

--- a/AllenNLP_0.ipynb
+++ b/AllenNLP_0.ipynb
@@ -175,10 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -191,7 +189,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecomposableAttentionPredictor\n",
+      "DecomposableAttentionPredictor\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "from allennlp.predictors.predictor import Predictor\n",
+    "predictor = Predictor.from_path(\"https://s3-us-west-2.amazonaws.com/allennlp/models/\"\n",
+    "                                \"decomposable-attention-elmo-2018.02.19.tar.gz\")\n",
+    "\n",
+    "follows = partial(predictor.predict, \n",
+    "                  premise=\"Two women are sitting on a blanket near some \"\n",
+    "                          \"rocks talking about politics.\")\n",
+    "\n",
+    "print(predictor.__class__.__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "label_logits\n",
       "label_probs\n",
       "h2p_attention\n",
@@ -202,36 +227,23 @@
     }
    ],
    "source": [
-    "from functools import partial\n",
-    "from allennlp.predictors.predictor import Predictor\n",
-    "predictor = Predictor.from_path(\"https://s3-us-west-2.amazonaws.com/allennlp/models/\"\n",
-    "                                \"decomposable-attention-elmo-2018.02.19.tar.gz\")\n",
+    "resp = follows(hypothesis=\"The pair of women have political talks.\")\n",
     "\n",
-    "premise = partial(predictor.predict, \n",
-    "                  hypothesis=\"Two women are sitting on a blanket near some \"\n",
-    "                             \"rocks talking about politics.\")\n",
-    "resp = premis\n",
-    "  \n",
-    "  #premise=\"Two women are wandering along the shore drinking iced tea.\"\n",
-    "  premise=\"The women are enjoy their lively conversation.\"\n",
-    ")\n",
-    "\n",
-    "print(predictor.__class__.__name__)\n",
     "print(\"\\n\".join(resp))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   entailment:  0.02%\n",
-      "contradiction: 27.24%\n",
-      "      neutral: 72.74%\n"
+      "   entailment: 63.50%\n",
+      "contradiction:  0.38%\n",
+      "      neutral: 36.12%\n"
      ]
     }
    ],
@@ -244,11 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   entailment:  0.00%\n",
+      "contradiction: 99.95%\n",
+      "      neutral:  0.05%\n"
+     ]
+    }
+   ],
    "source": [
-    "predictor.predict_batch_instance?"
+    "resp = follows(hypothesis=\"Two women are wandering along the shore drinking iced tea.\")\n",
+    "\n",
+    "for entailment, prob in zip(\n",
+    "    ['entailment', 'contradiction', 'neutral'], resp['label_probs']):\n",
+    "    print(f\"{entailment:>13}: {prob*100:5.2f}%\")"
    ]
   },
   {
